--- a/.gitignore
+++ b/.gitignore
@@ -116,5 +116,8 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-shimakaze.cfg # configuration file
-./main.py # main test file
+# cfg file
+shimakaze.cfg
+
+# test script
+main.py
